--- a/backend/package.json
+++ b/backend/package.json
@@ -3,17 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch src --exec ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "node-fetch": "^2.7.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.11",
     "@types/ws": "^8.5.12",
+    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
