--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-chessboard": "^4.7.1",
     "react-dom": "^18",
+    "swr": "^2.2.5",
     "viem": "^1.18.2",
     "wagmi": "^1.4.5"
   },
